fix horizontal scroll (footer scss)

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -11,12 +11,7 @@
   border-color: #2c2c28;
 }
 .footer {
-  width:100%;
   height: 60px;
-  .container {
-    width: 100%;
-    margin: 0 10px;
-  }
 }
 
 .footer-content {
